--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "backend",
+  "name": "chat-gpt-app-backend",
   "version": "1.0.0",
+  "description": "Backend para la aplicación ChatGPT",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "mongoose": "^8.12.1",
-    "serverless-http": "^3.2.0"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.14.1",
+    "openai": "^4.24.7",
+    "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
-
-
