--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "axios": "^1.6.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "mongoose": "^8.14.1",
+    "nodemailer": "^7.0.3",
     "openai": "^4.24.7",
     "xlsx": "^0.18.5"
   },
